# [package]
# name = "utrackr"
# version = "0.1.0"
# edition = "2021"

# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# utrackr-core = { path = "./utrackr-core" }
# tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
# log = { version = "0.4", features = ["release_max_level_info"] }

# [profile.release]
# lto = true
# codegen-units = 1
# panic = "abort"

[workspace]
members = ["utrackr-core", "utrackr-http", "utrackr"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
incremental = false
