[package]
name = "utrackr"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/FedericoCarboni/utrackr"
readme = "README.md"
description = """
Hackable peformance-focused BitTorrent tracker.
"""

[lib]
path = "src/utrackr/lib.rs"

[[bin]]
name = "utrackr"
test = false
doc = false

[dependencies]
ring = "0.16"
arrayref = "0.3.6"
rand = "0.8"
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
futures = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
env_logger = "0.9"
toml = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
incremental = false
