[package]
name = "utrackr-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", features = ["std", "alloc"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
futures = "0.3"
ed25519-dalek = "1"
