[package]
name = "utrackr-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["alloc"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
