[package]
name = "utrackr-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rand = { version = "0.8", features = ["alloc"] }
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
