[package]
name = "utrackr-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utrackr-core = { path = "../utrackr-core" }
percent-encoding = "2.1.0"
arrayref = "0.3.6"
# warp = { version = "0.3.2", default-features = false, features = ["compression-gzip"] }
tower = { version = "0.4", features = ["limit"] }
flate2 = { version = "1.0", features = ["zlib-ng-compat"] }
tokio = "1"
