[package]
name = "utrackr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utrackr-core = { path = "../utrackr-core" }
utrackr-http = { path = "../utrackr-http" }
hyper = { version = "0.14", features = ["tcp", "http1", "server"] }
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
warp = { version = "0.3.2", default-features = false, features = ["compression"] }
