[package]
name = "utrackr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utrackr-core = { path = "../core" }
utrackr-udp = { path = "../udp" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5.8"
env_logger = "0.9"
